Added: email stuff

--- a/apps/rubbish/src/app/auth/auth.component.html
+++ b/apps/rubbish/src/app/auth/auth.component.html
@@ -33,4 +33,9 @@
   <button mat-button (click)="login = !login">
     {{ (login) ? "Don't have an account? Signup." : "Have an account? Login." }}
   </button>
+
+  <br />
+
+  <a routerLink="/forgot">Forgot password?</a>
+
 </div>
