--- a/apps/rubbish/src/app/userportal/userportal.component.html
+++ b/apps/rubbish/src/app/userportal/userportal.component.html
@@ -23,6 +23,8 @@
             <mat-tab label="My Messages">
               <div class="tab-content">
                 <app-message-hub></app-message-hub>
+              </div>
+            </mat-tab>
             <mat-tab label="My Details">
               <div class="tab-content">
                 <app-account-data></app-account-data>
