--- a/apps/rubbish/src/app/moderatorportal/moderatorportal.component.html
+++ b/apps/rubbish/src/app/moderatorportal/moderatorportal.component.html
@@ -87,6 +87,15 @@
               </div>
             </div>
           </mat-tab>
+
+          <mat-tab label="Message Users">
+            <div class="tab-content">
+              <p>Select a user to message then send them a message.</p>
+              <div class="image-list">
+                <app-message-moderator></app-message-moderator>
+              </div>
+            </div>
+          </mat-tab>
         </mat-tab-group>
       </mat-card-content>
     </mat-card>
