--- a/apps/rubbish/src/app/account-data/account-data.component.html
+++ b/apps/rubbish/src/app/account-data/account-data.component.html
@@ -1,12 +1,21 @@
 <mat-form-field>
   <input matInput name="name" placeholder="Name" (change)="changeName($event)" [value]="user?.name || (user?.facebook || {}).name || (user?.google || {}).name">
+</mat-form-field>
 
-  </mat-form-field>
 <br>
+
 <mat-form-field>
   <input matInput name="email" placeholder="Email" (change)="changeEmail($event)" [value]="user?.email">
 </mat-form-field>
+
 <br>
+
+<mat-form-field>
+  <input matInput name="password" placeholder="Password" (change)="changePassword($event)" type="password">
+</mat-form-field>
+
+<br>
+
 <mat-checkbox [checked]="!user?.leaderboardVisible" (change)="user.leaderboardVisible = !user.leaderboardVisible">I don't want to have my name show up on the leaderboard (opt out of leaderboard).</mat-checkbox>
 
 <button class="btn btn-primary submit-btn" (click)="updateInformation()">Save!</button>
