--- a/apps/rubbish/src/app/browse-images/browse-images.component.scss
+++ b/apps/rubbish/src/app/browse-images/browse-images.component.scss
@@ -27,6 +27,24 @@
   }
 }
 
+.detail-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  max-height: 80vw;
+
+  max-width: 500px;
+
+  img {
+    width: auto;
+    height: auto;
+    max-width: 500px;
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+
+}
+
 .image-single {
   height: 100%;
   position: relative;
