--- a/apps/rubbish/src/app/moderatorportal/moderatorportal.component.html
+++ b/apps/rubbish/src/app/moderatorportal/moderatorportal.component.html
@@ -1,4 +1,5 @@
 <div class="row justify-content-md-center">
+  
   <div class="col-md-12 section">
     <h4 class="header">Welcome Admin!</h4>
     <p>Use the tabs below to perform different administration tasks...</p>
@@ -50,44 +51,10 @@
             <div class="tab-content">
               <p>View images which are pending acceptance from a moderator.</p>
               <div class="image-list">
-
-                <mat-form-field>
-                  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-                </mat-form-field>
-
-                <mat-table #table [dataSource]="flaggedSource" matSort>
-
-                  <!-- Title Column -->
-                  <ng-container matColumnDef="title">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Title </mat-header-cell>
-                    <mat-cell *matCellDef="let element"> {{element.title}} </mat-cell>
-                  </ng-container>
-
-                  <!-- Image Column -->
-                  <ng-container matColumnDef="url">
-                    <mat-header-cell *matHeaderCellDef> Image </mat-header-cell>
-                    <mat-cell *matCellDef="let element"> {{element.url}} </mat-cell>
-                  </ng-container>
-
-                  <!-- Delete Column -->
-                  <ng-container matColumnDef="delete">
-                    <mat-header-cell *matHeaderCellDef> Delete? </mat-header-cell>
-                    <mat-cell *matCellDef="let element"> <button class="delete-btn" mat-icon-button (click)="onFlaggedDeleteClicked(element)"><i class="material-icons">delete</i></button> </mat-cell>
-                  </ng-container>
-
-                  <!-- Accept Column -->
-                  <ng-container matColumnDef="accept">
-                    <mat-header-cell *matHeaderCellDef> Accept? </mat-header-cell>
-                    <mat-cell *matCellDef="let element"><button class="accept-btn" mat-icon-button (click)="onFlaggedAcceptClicked(element)"><i class="material-icons">check_circle</i></button></mat-cell>
-                  </ng-container>
-
-                  <mat-header-row *matHeaderRowDef="flaggedColumns"></mat-header-row>
-                  <mat-row *matRowDef="let row; columns: flaggedColumns;"></mat-row>
-                </mat-table>
-
-                <mat-paginator #paginatorflagged [pageSize]="10" [pageSizeOptions]="[5, 10, 20]" [showFirstLastButtons]="true"></mat-paginator>
-
-
+                <app-flagged-grid 
+                [images]="flaggedData | async"
+                (update)="this.fetchFlaggedImages()"
+                ></app-flagged-grid>
               </div>
             </div>
           </mat-tab>
