Added information about the leaderboard to home.

--- a/apps/rubbish/src/app/home/home.component.html
+++ b/apps/rubbish/src/app/home/home.component.html
@@ -52,4 +52,30 @@
       </div>
     </div>
   </div>
+
+  <div class="col-md-12 section">
+    <div class="row">
+      <div class="col-md-8">
+        <h4>{{appName}} Leaderboard</h4>
+        <p>
+          We have created a leaderboard and points ranking system in order to reward you for your efforts of finding rubbish in your local waterways.
+          The leaderboard system has the ability to rank by state, postcode or just list the results nationally.
+        </p>
+        <p>
+          It works by giving you a number of points based on the number of pieces of rubbish our trained neural network finds in your images.
+          By allowing geolocation through the site, we can then use this information to set your postcode so that you can rank your account against other suburbs.
+        </p>
+        <p>
+          We have also implemented a levelling up feature, so by reaching a certain number of points you will automatically rank up.
+          So get on out there and start uploading rubbish in your local waterway and start collecting points to rival your friends and family!
+        </p>
+        <p>
+          <i>Note: you can remove yourself from the leaderboard by going to your account settings and opting out.</i>
+        </p>
+      </div>
+      <div class="col-md-4">
+        <img src="/assets/images/leaderboard-info.png" width="100%" alt="Waterways Leaderboard" />
+      </div>
+    </div>
+  </div>
 </div>
