Added in all the data for stats page.

--- a/apps/rubbish/src/app/account-stats/account-stats.component.html
+++ b/apps/rubbish/src/app/account-stats/account-stats.component.html
@@ -1,3 +1,7 @@
 <p>
   This is your account stats page. Below you can see your account rank, total number of images uploaded, the total number of rubbish detected, and ranking information.
 </p>
+
+<p class="account-stats-info">Current Rank: coming soon</p>
+<p class="account-stats-info">Total images uploaded: {{totalImages}}</p>
+<p class="account-stats-info">Total rubbish detected: {{totalDetections}}</p>
