--- a/apps/rubbish/src/app/nav/nav.component.html
+++ b/apps/rubbish/src/app/nav/nav.component.html
@@ -11,6 +11,9 @@
         <a class="nav-link" (click)="isNavbarCollapsed = !isNavbarCollapsed" routerLink="/">Home</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" (click)="isNavbarCollapsed = !isNavbarCollapsed" routerLink="/statistics">Stats</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" (click)="isNavbarCollapsed = !isNavbarCollapsed" routerLink="/browse-public">Images</a>
       </li>
       <li class="nav-item">
