Changed multiple instances of where we used rank to denote level to "level." Missing one instance of the work rank being used on the image under the user's personal stats page. Added link at the bottom of the page that links to the recycling station.

--- a/apps/rubbish/src/app/account-stats/account-stats.component.html
+++ b/apps/rubbish/src/app/account-stats/account-stats.component.html
@@ -3,7 +3,7 @@
 </p>
 
 <ul>
-  <li>Your <strong>Current Rank</strong> is calculated based upon the number of points you have collected.</li>
+  <li>Your <strong>Current Level</strong> is calculated based upon the number of points you have collected.</li>
   <li>Your <strong>Total Points</strong> is the total sum of all your collected points.</li>
   <li>Your <strong>Total Images</strong> is the total sum of all your uploaded images (flagged orm otherwise).</li>
   <li>Your <strong>Total Rubbish</strong> is the caluclation of all rubbish detected by our systems.</li>
