--- a/apps/rubbish/src/app/footer/footer.component.html
+++ b/apps/rubbish/src/app/footer/footer.component.html
@@ -1,5 +1,6 @@
 <footer>
   <div class="row justify-content-md-center">
+
     <div class="col-md-8">
       <img class="logo" width="200px" src="/assets/images/waterways-logo.png">
     </div>
@@ -10,6 +11,9 @@
       <a href=""><i class="fab fa-facebook"></i></a>
       <a href=""><i class="fab fa-twitter-square"></i></a>
       <a href=""><i class="fab fa-instagram"></i></a>
+    </div>
+    <div class="col-md-8">
+      <a href="https://www.containersforchange.com.au/where-can-i-return" style="color:white">Click here to find your closest container refund point</a>
     </div>
     <div class="col-md-8">
       <p class="copyright-line">&copy; Copyright {{today | date:'yyyy'}} Zen Tech | QUT Capstone Academic Project</p>
