Add docker image

--- a/apps/rubbish/src/app/password-reset/password-reset.component.html
+++ b/apps/rubbish/src/app/password-reset/password-reset.component.html
@@ -1,4 +1,4 @@
-<div class="reset" *ngIf="!sent">
+<div class="reset">
   <h2>Forgotten Password?</h2>
   If you've forgotten your password, we can send you a reset link to your email address.
   <form #form="ngForm" (ngSubmit)="submit()">
